frontend/styles.css
body {
  margin: 0;
}

nav {
  border-bottom: 1px solid lightgray;
  padding: 2vh;
  height: 10vh;
  position: fixed;
  width: 100vw;
  z-index: 5;
  background-color: white;
}

aside {
  border-right: 1px solid lightgray;
  padding: 2vh;
  width: 20vw;
  position: fixed;
  top: 10vh;
  bottom: 0;
  overflow-y: scroll;
}

#content {
  padding: 2vh;
  width: 80vw;
  display: flex;
  align-content: center;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: center;
  position: absolute;
  top: 10vh;
  right: 0;
  overflow-y:hidden;
  z-index: 3;
}

/* #root{
  display: flex;
  justify-content: center;
} */
.card{
  width: 20vw;
  margin: 2vw;
}

